RESOLVED FIXED247433
SyntaxError is thrown when parameter in array pattern and function have same name
https://bugs.webkit.org/show_bug.cgi?id=247433
Summary SyntaxError is thrown when parameter in array pattern and function have same ...
Kanguk Lee
Reported 2022-11-03 09:09:46 PDT
// input.js ( function x ( [ x ] ) { } ( [ ] ) ) ; __________________________________________ Hello, Executing the input.js using JSC throws SyntaxError, but it is expected to be terminated normally. Running the input.js with JSC results in: --- $ jsc input.js Exception: SyntaxError: Duplicate parameter 'x' not allowed in function with destructuring parameters. at input.js:1 --- while other engines behave like: --- # V8 $ node input.js // no error # GraalJS $ js input.js // no error --- WebKit version: 615.1.10
Attachments
Radar WebKit Bug Importer
Comment 1 2022-11-07 16:48:45 PST
Yijia Huang
Comment 2 2022-11-08 10:19:27 PST
EWS
Comment 3 2022-11-08 21:54:29 PST
Committed 256478@main (a44c26d2439a): <https://commits.webkit.org/256478@main> Reviewed commits have been landed. Closing PR #6257 and removing active labels.
Alexey Shvayka
Comment 4 2023-10-12 15:09:54 PDT
*** Bug 220517 has been marked as a duplicate of this bug. ***
Note You need to log in before you can comment on or make changes to this bug.