Fix SyntaxError thrown when parameter in array pattern and function have same name https://bugs.webkit.org/show_bug.cgi?id=247433 rdar://102066019

Reviewed by Yusuke Suzuki.

When declaring a callee's name, it should be labeled as a function. In that
case, we can prevent false positives for duplicated callees and parameters.

* JSTests/stress/duplicated-callee-and-parameter.js: Added.
(x):
* Source/JavaScriptCore/parser/Parser.h:
(JSC::Scope::declareCallee):
(JSC::Scope::declareParameter):

Canonical link: https://commits.webkit.org/256478@main